--- a/portfolio.html
+++ b/portfolio.html
@@ -222,14 +222,25 @@
     <!--Footer-->
     <footer class="page-footer">
       <div class="container footer">
-        <a href="./index.html" class="logo-footer"> <span class="logo-web">Web</span>Studio</a>
-        <address class="address">г. Киев, пр-т Леси Украинки, 26</address>
-        <ul class="footer-conn list">
-          <li class="item">
-            <a href="mailto:info@example.com" class="link">info@example.com</a>
-          </li>
-          <li class="item"><a href="tel:+380961111111" class="link tel">+38 096 111 11 11</a></li>
-        </ul>
+        <div class="footer-left">
+          <a href="./index.html" class="logo-footer"> <span class="logo-web">Web</span>Studio</a>
+          <address class="address">г. Киев, пр-т Леси Украинки, 26</address>
+          <ul class="footer-conn list">
+            <li class="item">
+              <a href="mailto:info@example.com" class="link">info@example.com</a>
+            </li>
+            <li class="item"><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
+          </ul>
+        </div>
+        <div class="footer-social">
+          <p class="social-text">присоединяйтесь</p>
+          <ul class="list">
+            <li class="item-footer"></li>
+            <li class="item-footer"></li>
+            <li class="item-footer"></li>
+            <li class="item-footer"></li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
