убирает тэг article

--- a/portfolio.html
+++ b/portfolio.html
@@ -54,7 +54,7 @@
           <!--Продукты-->
           <ul class="products list">
             <li class="item">
-              <article class="card">
+              <div class="card">
                 <div class="card-thumb">
                   <img
                     src="./images/portfolio1.jpg"
@@ -68,11 +68,11 @@
                   <h2 class="products-title">Технокряк</h2>
                   <p class="products-type">Веб-сайт</p>
                 </div>
-              </article>
+              </div>
             </li>
 
             <li class="item">
-              <article class="card">
+              <div class="card">
                 <div class="card-thumb">
                   <img
                     src="./images/portfolio2.jpg"
@@ -86,11 +86,11 @@
                   <h2 class="products-title">Постер New Orlean vs Golden Star</h2>
                   <p class="products-type">Дизайн</p>
                 </div>
-              </article>
+              </div>
             </li>
 
             <li class="item">
-              <article class="card">
+              <div class="card">
                 <div class="card-thumb">
                   <img
                     src="./images/portfolio3.jpg"
@@ -104,11 +104,11 @@
                   <h2 class="products-title">Ресторан Seafood</h2>
                   <p class="products-type">Приложение</p>
                 </div>
-              </article>
+              </div>
             </li>
 
             <li class="item">
-              <article class="card">
+              <div class="card">
                 <div class="card-thumb">
                   <img
                     src="./images/portfolio4.jpg"
@@ -122,11 +122,11 @@
                   <h2 class="products-title">Проект Prime</h2>
                   <p class="products-type">Маркетинг</p>
                 </div>
-              </article>
+              </div>
             </li>
 
             <li class="item">
-              <article class="card">
+              <div class="card">
                 <div class="card-thumb">
                   <img
                     src="./images/portfolio5.jpg"
@@ -140,11 +140,11 @@
                   <h2 class="products-title">Проект Boxes</h2>
                   <p class="products-type">Приложение</p>
                 </div>
-              </article>
+              </div>
             </li>
 
             <li class="item">
-              <article class="card">
+              <div class="card">
                 <div class="card-thumb">
                   <img
                     src="./images/portfolio6.jpg"
@@ -158,11 +158,11 @@
                   <h2 class="products-title">Inspiration has no Borders</h2>
                   <p class="products-type">Веб-сайт</p>
                 </div>
-              </article>
+              </div>
             </li>
 
             <li class="item">
-              <article class="card">
+              <div class="card">
                 <div class="card-thumb">
                   <img
                     src="./images/portfolio7.jpg"
@@ -176,11 +176,11 @@
                   <h2 class="products-title">Издание Limited Edition</h2>
                   <p class="products-type">Дизайн</p>
                 </div>
-              </article>
+              </div>
             </li>
 
             <li class="item">
-              <article class="card">
+              <div class="card">
                 <div class="card-thumb">
                   <img
                     src="./images/portfolio8.jpg"
@@ -194,11 +194,11 @@
                   <h2 class="products-title">Проект LAB</h2>
                   <p class="products-type">Маркетинг</p>
                 </div>
-              </article>
+              </div>
             </li>
 
             <li class="item">
-              <article class="card">
+              <div class="card">
                 <div class="card-thumb">
                   <img
                     src="./images/portfolio9.jpg"
@@ -212,7 +212,7 @@
                   <h2 class="products-title">Growing Business</h2>
                   <p class="products-type">Приложение</p>
                 </div>
-              </article>
+              </div>
             </li>
           </ul>
         </div>
