Делает спрайт и пытается с ним работать

--- a/index.html
+++ b/index.html
@@ -181,12 +181,53 @@
         <div class="container">
           <h2 class="clients-title">Постоянные клиенты</h2>
           <ul class="list clients-list">
-            <li class="item">123</li>
-            <li class="item">123</li>
-            <li class="item">123</li>
-            <li class="item">123</li>
-            <li class="item">123</li>
-            <li class="item">123</li>
+            <li class="item">
+              <a href="" class="link-client">
+                <svg class="clients-icon" width="41" height="47">
+                  <use href="./images/sprites.svg#icon-client1"></use>
+                </svg>
+              </a>
+            </li>
+
+            <li class="item">
+              <a href="" class="link-client">
+                <svg class="clients-icon" width="40" height="52">
+                  <use href="./images/sprites.svg#icon-client2"></use>
+                </svg>
+              </a>
+            </li>
+
+            <li class="item">
+              <a href="" class="link-client">
+                <svg class="clients-icon" width="43" height="41">
+                  <use href="./images/sprites.svg#icon-client3"></use>
+                </svg>
+              </a>
+            </li>
+
+            <li class="item">
+              <a href="" class="link-client">
+                <svg class="clients-icon" width="84" height="41">
+                  <use href="./images/sprites.svg#icon-client4"></use>
+                </svg>
+              </a>
+            </li>
+
+            <li class="item">
+              <a href="" class="link-client">
+                <svg class="clients-icon" width="63" height="45">
+                  <use href="./images/sprites.svg#icon-client5"></use>
+                </svg>
+              </a>
+            </li>
+
+            <li class="item">
+              <a href="" class="link-client">
+                <svg class="clients-icon" width="94" height="44">
+                  <use href="./images/sprites.svg#icon-client6"></use>
+                </svg>
+              </a>
+            </li>
           </ul>
         </div>
       </section>
