Добавляет иконки в хедере

--- a/index.html
+++ b/index.html
@@ -32,9 +32,19 @@
 
         <ul class="header-conn list">
           <li class="item">
-            <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
+            <a href="mailto:info@devstudio.com" class="link"
+              ><svg class="conn-icon" width="16" height="12">
+                <use href="./images/sprites.svg#icon-mail"></use></svg
+              >info@devstudio.com</a
+            >
           </li>
-          <li class="item"><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
+          <li class="item">
+            <a href="tel:+380961111111" class="link"
+              ><svg class="conn-icon" width="10" height="16">
+                <use href="./images/sprites.svg#icon-tel"></use></svg
+              >+38 096 111 11 11</a
+            >
+          </li>
         </ul>
       </div>
     </header>
