--- a/portfolio.html
+++ b/portfolio.html
@@ -22,19 +22,29 @@
     <header class="page-header">
       <div class="container header">
         <nav class="site-nav">
-          <a href="./index.html" class="logo-header"> <span class="logo-web">Web</span>Studio</a>
+          <a href="./index.html" class="logo-header"><span class="logo-web">Web</span>Studio</a>
           <ul class="header-nav list">
-            <li class="item"><a href="./index.html" class="link">Студия</a></li>
-            <li class="item"><a href="./portfolio.html" class="link current">Портфолио</a></li>
+            <li class="item"><a href="./index.html" class="link current">Студия</a></li>
+            <li class="item"><a href="./portfolio.html" class="link">Портфолио</a></li>
             <li class="item"><a href="" class="link">Контакты</a></li>
           </ul>
         </nav>
 
         <ul class="header-conn list">
           <li class="item">
-            <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
+            <a href="mailto:info@devstudio.com" class="link"
+              ><svg class="conn-icon" width="16" height="12">
+                <use href="./images/sprites.svg#icon-mail"></use></svg
+              >info@devstudio.com</a
+            >
           </li>
-          <li class="item"><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
+          <li class="item">
+            <a href="tel:+380961111111" class="link"
+              ><svg class="conn-icon" width="10" height="16">
+                <use href="./images/sprites.svg#icon-tel"></use></svg
+              >+38 096 111 11 11</a
+            >
+          </li>
         </ul>
       </div>
     </header>
