Добавляет все svg

--- a/index.html
+++ b/index.html
@@ -67,24 +67,44 @@
           <h2 class="invisible">Наши особенности</h2>
           <ul class="list features-display">
             <li class="item">
+              <div class="features-icon">
+                <svg class="icon" width="70" height="70">
+                  <use href="./images/sprites.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="features-title">Внимание к деталям</h3>
               <p class="features-text">
                 Идейные соображения, а также начало повседневной работы по формированию позиции.
               </p>
             </li>
             <li class="item">
+              <div class="features-icon">
+                <svg class="icon" width="70" height="70">
+                  <use href="./images/sprites.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="features-title">Пунктуальность</h3>
               <p class="features-text">
                 Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
               </p>
             </li>
             <li class="item">
+              <div class="features-icon">
+                <svg class="icon" width="70" height="70">
+                  <use href="./images/sprites.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="features-title">Планирование</h3>
               <p class="features-text">
                 Равным образом консультация с широким активом в значительной степени обуславливает.
               </p>
             </li>
             <li class="item">
+              <div class="features-icon">
+                <svg class="icon" width="70" height="70">
+                  <use href="./images/sprites.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="features-title">Современные технологии</h3>
               <p class="features-text">
                 Значимость этих проблем настолько очевидна, что реализация плановых заданий.
@@ -125,6 +145,32 @@
                 <div class="card-person-content">
                   <h3 class="team-name">Игорь Демьяненко</h3>
                   <p class="team-speciality">Product Designer</p>
+                  <ul class="list team-list">
+                    <li class="item">
+                      <a href="" class="link-team"
+                        ><svg class="team-icon" width="20" height="20">
+                          <use href="./images/sprites.svg#icon-instagram"></use></svg
+                      ></a>
+                    </li>
+                    <li class="item">
+                      <a href="" class="link-team"
+                        ><svg class="team-icon" width="20" height="20">
+                          <use href="./images/sprites.svg#icon-twitter"></use></svg
+                      ></a>
+                    </li>
+                    <li class="item">
+                      <a href="" class="link-team"
+                        ><svg class="team-icon" width="20" height="20">
+                          <use href="./images/sprites.svg#icon-facebook"></use></svg
+                      ></a>
+                    </li>
+                    <li class="item">
+                      <a href="" class="link-team"
+                        ><svg class="team-icon" width="20" height="20">
+                          <use href="./images/sprites.svg#icon-linkedin"></use></svg
+                      ></a>
+                    </li>
+                  </ul>
                 </div>
               </div>
             </li>
@@ -143,6 +189,32 @@
                 <div class="card-person-content">
                   <h3 class="team-name">Ольга Репина</h3>
                   <p class="team-speciality">Frontend Developer</p>
+                  <ul class="list team-list">
+                    <li class="item">
+                      <a href="" class="link-team"
+                        ><svg class="team-icon" width="20" height="20">
+                          <use href="./images/sprites.svg#icon-instagram"></use></svg
+                      ></a>
+                    </li>
+                    <li class="item">
+                      <a href="" class="link-team"
+                        ><svg class="team-icon" width="20" height="20">
+                          <use href="./images/sprites.svg#icon-twitter"></use></svg
+                      ></a>
+                    </li>
+                    <li class="item">
+                      <a href="" class="link-team"
+                        ><svg class="team-icon" width="20" height="20">
+                          <use href="./images/sprites.svg#icon-facebook"></use></svg
+                      ></a>
+                    </li>
+                    <li class="item">
+                      <a href="" class="link-team"
+                        ><svg class="team-icon" width="20" height="20">
+                          <use href="./images/sprites.svg#icon-linkedin"></use></svg
+                      ></a>
+                    </li>
+                  </ul>
                 </div>
               </div>
             </li>
@@ -161,6 +233,32 @@
                 <div class="card-person-content">
                   <h3 class="team-name">Николай Тарасов</h3>
                   <p class="team-speciality">Marketing</p>
+                  <ul class="list team-list">
+                    <li class="item">
+                      <a href="" class="link-team"
+                        ><svg class="team-icon" width="20" height="20">
+                          <use href="./images/sprites.svg#icon-instagram"></use></svg
+                      ></a>
+                    </li>
+                    <li class="item">
+                      <a href="" class="link-team"
+                        ><svg class="team-icon" width="20" height="20">
+                          <use href="./images/sprites.svg#icon-twitter"></use></svg
+                      ></a>
+                    </li>
+                    <li class="item">
+                      <a href="" class="link-team"
+                        ><svg class="team-icon" width="20" height="20">
+                          <use href="./images/sprites.svg#icon-facebook"></use></svg
+                      ></a>
+                    </li>
+                    <li class="item">
+                      <a href="" class="link-team"
+                        ><svg class="team-icon" width="20" height="20">
+                          <use href="./images/sprites.svg#icon-linkedin"></use></svg
+                      ></a>
+                    </li>
+                  </ul>
                 </div>
               </div>
             </li>
@@ -179,6 +277,32 @@
                 <div class="card-person-content">
                   <h3 class="team-name">Михаил Ермаков</h3>
                   <p class="team-speciality">UI Designer</p>
+                  <ul class="list team-list">
+                    <li class="item">
+                      <a href="" class="link-team"
+                        ><svg class="team-icon" width="20" height="20">
+                          <use href="./images/sprites.svg#icon-instagram"></use></svg
+                      ></a>
+                    </li>
+                    <li class="item">
+                      <a href="" class="link-team"
+                        ><svg class="team-icon" width="20" height="20">
+                          <use href="./images/sprites.svg#icon-twitter"></use></svg
+                      ></a>
+                    </li>
+                    <li class="item">
+                      <a href="" class="link-team"
+                        ><svg class="team-icon" width="20" height="20">
+                          <use href="./images/sprites.svg#icon-facebook"></use></svg
+                      ></a>
+                    </li>
+                    <li class="item">
+                      <a href="" class="link-team"
+                        ><svg class="team-icon" width="20" height="20">
+                          <use href="./images/sprites.svg#icon-linkedin"></use></svg
+                      ></a>
+                    </li>
+                  </ul>
                 </div>
               </div>
             </li>
@@ -258,11 +382,31 @@
         </div>
         <div class="footer-social">
           <p class="social-text">присоединяйтесь</p>
-          <ul class="list">
-            <li class="item-footer"></li>
-            <li class="item-footer"></li>
-            <li class="item-footer"></li>
-            <li class="item-footer"></li>
+          <ul class="list footer-list">
+            <li class="item">
+              <a href="" class="link-footer"
+                ><svg class="footer-icon" width="20" height="20">
+                  <use href="./images/sprites.svg#icon-instagram"></use></svg
+              ></a>
+            </li>
+            <li class="item">
+              <a href="" class="link-footer"
+                ><svg class="footer-icon" width="20" height="20">
+                  <use href="./images/sprites.svg#icon-twitter"></use></svg
+              ></a>
+            </li>
+            <li class="item">
+              <a href="" class="link-footer"
+                ><svg class="footer-icon" width="20" height="20">
+                  <use href="./images/sprites.svg#icon-facebook"></use></svg
+              ></a>
+            </li>
+            <li class="item">
+              <a href="" class="link-footer"
+                ><svg class="footer-icon" width="20" height="20">
+                  <use href="./images/sprites.svg#icon-linkedin"></use></svg
+              ></a>
+            </li>
           </ul>
         </div>
       </div>
