--- a/portfolio.html
+++ b/portfolio.html
@@ -24,8 +24,8 @@
         <nav class="site-nav">
           <a href="./index.html" class="logo-header"><span class="logo-web">Web</span>Studio</a>
           <ul class="header-nav list">
-            <li class="item"><a href="./index.html" class="link current">Студия</a></li>
-            <li class="item"><a href="./portfolio.html" class="link">Портфолио</a></li>
+            <li class="item"><a href="./index.html" class="link">Студия</a></li>
+            <li class="item"><a href="./portfolio.html" class="link current">Портфолио</a></li>
             <li class="item"><a href="" class="link">Контакты</a></li>
           </ul>
         </nav>
@@ -244,11 +244,31 @@
         </div>
         <div class="footer-social">
           <p class="social-text">присоединяйтесь</p>
-          <ul class="list">
-            <li class="item-footer"></li>
-            <li class="item-footer"></li>
-            <li class="item-footer"></li>
-            <li class="item-footer"></li>
+          <ul class="list footer-list">
+            <li class="item">
+              <a href="" class="link-footer"
+                ><svg class="footer-icon" width="20" height="20">
+                  <use href="./images/sprites.svg#icon-instagram"></use></svg
+              ></a>
+            </li>
+            <li class="item">
+              <a href="" class="link-footer"
+                ><svg class="footer-icon" width="20" height="20">
+                  <use href="./images/sprites.svg#icon-twitter"></use></svg
+              ></a>
+            </li>
+            <li class="item">
+              <a href="" class="link-footer"
+                ><svg class="footer-icon" width="20" height="20">
+                  <use href="./images/sprites.svg#icon-facebook"></use></svg
+              ></a>
+            </li>
+            <li class="item">
+              <a href="" class="link-footer"
+                ><svg class="footer-icon" width="20" height="20">
+                  <use href="./images/sprites.svg#icon-linkedin"></use></svg
+              ></a>
+            </li>
           </ul>
         </div>
       </div>
